--- a/Mybatis SQL Log解析.html
+++ b/Mybatis SQL Log解析.html
@@ -27,7 +27,7 @@
             font-family: 'Inter', sans-serif;
             line-height: 1.6;
             color: var(--text-color);
-            background-color: var(--bg-color);
+            background: linear-gradient(135deg, #e0f7fa, #c8e6c9);
             transition: background-color 0.3s, color 0.3s;
             margin: 0;
             padding: 20px;
