fix boss Ma 提的看不清的问题

--- a/Mybatis SQL Log解析.html
+++ b/Mybatis SQL Log解析.html
@@ -13,6 +13,7 @@
             --primary-color: #2c0c00;
             --secondary-color: #e0e7ff;
             --border-color: #d1d5db;
+            --button-hover: #589978;
         }
 
         .dark-mode {
