Update Mybatis SQL Log解析.html

--- a/Mybatis SQL Log解析.html
+++ b/Mybatis SQL Log解析.html
@@ -39,35 +39,43 @@
             min-height: 100vh;
         }
 
-        /* Sidebar */
         .sidebar {
-            width: 160px;
-            background-color: #26333f;
-            padding: 20px;
-            color: white;
-            display: flex;
-            flex-direction: column;
-            border-radius: 5px;
-        }
+    width: 160px;
+    background: linear-gradient(135deg, #000000, #01798c);
+    padding: 20px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease-in-out;
+}
 
-        .sidebar h2 {
-            color: white;
-            font-size: 20px;
-            margin-bottom: 20px;
-        }
+.sidebar h2 {
+    color: #e0f7fa;
+    font-size: 22px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
 
-        .sidebar a {
-            color: white;
-            text-decoration: none;
-            margin-bottom: 10px;
-            font-weight: 600;
-            display: block;
-            transition: color 0.3s;
-        }
+.sidebar a {
+    color: #e0f7fa;
+    text-decoration: none;
+    margin-bottom: 15px;
+    font-weight: 600;
+    padding: 10px;
+    border-radius: 5px;
+    transition: background 0.3s, transform 0.2s;
+    display: block;
+}
 
-        .sidebar a:hover {
-            color: var(--button-hover);
-        }
+.sidebar a:hover {
+    background: rgba(255, 255, 255, 0.2);
+    color: #ffffff;
+    transform: scale(1.05);
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
 
         /* Main content */
         .main-content {
