Update Mybatis SQL Log解析.html

--- a/Mybatis SQL Log解析.html
+++ b/Mybatis SQL Log解析.html
@@ -189,8 +189,8 @@
         <!-- Sidebar -->
         <div class="sidebar">
             <h2>工具菜单</h2>
-            <a href="Mybatis SQL Log解析.html" class="sub-link">SQL 解析</a>
-            <a href="平台 SQL Log解析.html" class="sub-link">平台 SQL 解析</a>
+            <a href="Mybatis SQL Log解析.html" class="sub-link">Mybatis SQL 解析</a>
+	        <a href="平台 SQL Log解析.html" class="sub-link">平台 SQL 解析</a>
             <a href="sql语句加引号.html" class="sub-link">SQL 条件加引号</a>
             <a href="index.html">回到主页</a>
         </div>
