--- a/sql语句加引号.html
+++ b/sql语句加引号.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>内容转换工具</title>
+    <title>Sql条件加引号工具</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Fira+Code&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -186,11 +186,10 @@
 
 <body>
         <div class="container">
-        <!-- Sidebar -->
         <div class="sidebar">
             <h2>工具菜单</h2>
-            <a href="Mybatis SQL Log解析.html" class="sub-link">SQL 解析</a>
-            <a href="平台 SQL Log解析.html" class="sub-link">平台 SQL 解析</a>
+            <a href="Mybatis SQL Log解析.html" class="sub-link">Mybatis SQL 解析</a>
+	        <a href="平台 SQL Log解析.html" class="sub-link">平台 SQL 解析</a>
             <a href="sql语句加引号.html" class="sub-link">SQL 条件加引号</a>
             <a href="index.html">回到主页</a>
         </div>
@@ -198,7 +197,7 @@
         <!-- Main content area -->
         <div class="main-content">
             <header>
-                <h1>内容转换工具</h1>
+                <h1>SQL条件加引号工具</h1>
                 <button id="darkModeToggle">🌙</button>
             </header>
 
