--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             <li><a href="Mybatis SQL Log解析.html">Mybatis SQL Log 解析</a></li>
             <li><a href="平台 SQL Log解析.html">平台 SQL 解析</a></li>
             <li><a href="sql语句加引号.html">SQL 条件加引号</a></li>
+            <li><a href="fc/index.html">FC小游戏</a></li>
         </ul>
     </main>
     <footer>
